WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120720
Animations in an AnimationList are never null
https://bugs.webkit.org/show_bug.cgi?id=120720
Summary
Animations in an AnimationList are never null
Anders Carlsson
Reported
2013-09-04 19:35:33 PDT
Animations in an AnimationList are never null
Attachments
Patch
(24.24 KB, patch)
2013-09-04 19:45 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(25.13 KB, patch)
2013-09-05 07:11 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-09-04 19:45:39 PDT
Created
attachment 210540
[details]
Patch
Andreas Kling
Comment 2
2013-09-04 19:48:11 PDT
Comment on
attachment 210540
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210540&action=review
I feel like I'm reviewing a patch by myself from the future.
> Source/WebCore/platform/animation/AnimationList.h:52 > + void append(PassRefPtr<Animation> anim)
"anim"? :P
Early Warning System Bot
Comment 3
2013-09-04 19:54:28 PDT
Comment on
attachment 210540
[details]
Patch
Attachment 210540
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/1685792
Early Warning System Bot
Comment 4
2013-09-04 19:56:04 PDT
Comment on
attachment 210540
[details]
Patch
Attachment 210540
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/1692764
EFL EWS Bot
Comment 5
2013-09-04 20:57:08 PDT
Comment on
attachment 210540
[details]
Patch
Attachment 210540
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/1686845
kov's GTK+ EWS bot
Comment 6
2013-09-04 21:00:41 PDT
Comment on
attachment 210540
[details]
Patch
Attachment 210540
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1697473
EFL EWS Bot
Comment 7
2013-09-04 21:22:21 PDT
Comment on
attachment 210540
[details]
Patch
Attachment 210540
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/1692775
Anders Carlsson
Comment 8
2013-09-05 07:11:40 PDT
Created
attachment 210613
[details]
Patch
Andreas Kling
Comment 9
2013-09-05 08:09:05 PDT
Comment on
attachment 210613
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210613&action=review
> Source/WebCore/platform/animation/AnimationList.h:64 > + Vector<RefPtr<Animation>> m_animations;
This should really be a Vector<Ref<Animation>>
Anders Carlsson
Comment 10
2013-09-05 08:10:39 PDT
Regressions: Unexpected image-only failures (1) animations/cross-fade-background-image.html [ ImageOnlyFailure ] This fails for me even without the patch.
Anders Carlsson
Comment 11
2013-09-05 08:15:07 PDT
Committed
r155119
: <
http://trac.webkit.org/changeset/155119
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug