Source/WebCore/page/animation/CompositeAnimation.cpp
@@ -97,14 +97,14 @@ void CompositeAnimation::updateTransitions(RenderObject* renderer, RenderStyle* 
     // Check to see if we need to update the active transitions
     if (targetStyle->transitions()) {
         for (size_t i = 0; i < targetStyle->transitions()->size(); ++i) {
-            const Animation* anim = targetStyle->transitions()->animation(i);
-            bool isActiveTransition = !m_suspended && (anim->duration() || anim->delay() > 0);
+            const Animation& animation = targetStyle->transitions()->animation(i);
+            bool isActiveTransition = !m_suspended && (animation.duration() || animation.delay() > 0);
 
-            Animation::AnimationMode mode = anim->animationMode();
+            Animation::AnimationMode mode = animation.animationMode();
             if (mode == Animation::AnimateNone)
                 continue;
 
-            CSSPropertyID prop = anim->property();
+            CSSPropertyID prop = animation.property();
 
             bool all = mode == Animation::AnimateAll;
 
@@ -174,9 +174,9 @@ void CompositeAnimation::updateTransitions(RenderObject* renderer, RenderStyle* 
                 // <https://bugs.webkit.org/show_bug.cgi?id=24787>
                 if (!equal && isActiveTransition) {
                     // Add the new transition
-                    RefPtr<ImplicitAnimation> animation = ImplicitAnimation::create(const_cast<Animation*>(anim), prop, renderer, this, modifiedCurrentStyle ? modifiedCurrentStyle.get() : fromStyle);
-                    LOG(Animations, "Created ImplicitAnimation %p for property %s duration %.2f delay %.2f", animation.get(), getPropertyName(prop), anim->duration(), anim->delay());
-                    m_transitions.set(prop, animation.release());
+                    RefPtr<ImplicitAnimation> implicitAnimation = ImplicitAnimation::create(const_cast<Animation*>(&animation), prop, renderer, this, modifiedCurrentStyle ? modifiedCurrentStyle.get() : fromStyle);
+                    LOG(Animations, "Created ImplicitAnimation %p for property %s duration %.2f delay %.2f", implicitAnimation.get(), getPropertyName(prop), animation.duration(), animation.delay());
+                    m_transitions.set(prop, implicitAnimation.release());
                 }
                 
                 // We only need one pass for the single prop case
@@ -234,10 +234,10 @@ void CompositeAnimation::updateKeyframeAnimations(RenderObject* renderer, Render
         if (targetStyle->animations()) {
             int numAnims = targetStyle->animations()->size();
             for (int i = 0; i < numAnims; ++i) {
-                const Animation* anim = targetStyle->animations()->animation(i);
-                AtomicString animationName(anim->name());
+                const Animation& animation = targetStyle->animations()->animation(i);
+                AtomicString animationName(animation.name());
 
-                if (!anim->isValidAnimation())
+                if (!animation.isValidAnimation())
                     continue;
                 
                 // See if there is a current animation for this name.
@@ -251,14 +251,14 @@ void CompositeAnimation::updateKeyframeAnimations(RenderObject* renderer, Render
                     // This one is still active.
 
                     // Animations match, but play states may differ. Update if needed.
-                    keyframeAnim->updatePlayState(anim->playState());
+                    keyframeAnim->updatePlayState(animation.playState());
                                 
                     // Set the saved animation to this new one, just in case the play state has changed.
-                    keyframeAnim->setAnimation(anim);
+                    keyframeAnim->setAnimation(&animation);
                     keyframeAnim->setIndex(i);
-                } else if ((anim->duration() || anim->delay()) && anim->iterationCount() && animationName != none) {
-                    keyframeAnim = KeyframeAnimation::create(const_cast<Animation*>(anim), renderer, i, this, targetStyle);
-                    LOG(Animations, "Creating KeyframeAnimation %p with keyframes %s, duration %.2f, delay %.2f, iterations %.2f", keyframeAnim.get(), anim->name().utf8().data(), anim->duration(), anim->delay(), anim->iterationCount());
+                } else if ((animation.duration() || animation.delay()) && animation.iterationCount() && animationName != none) {
+                    keyframeAnim = KeyframeAnimation::create(const_cast<Animation*>(&animation), renderer, i, this, targetStyle);
+                    LOG(Animations, "Creating KeyframeAnimation %p with keyframes %s, duration %.2f, delay %.2f, iterations %.2f", keyframeAnim.get(), animation.name().utf8().data(), animation.duration(), animation.delay(), animation.iterationCount());
                     if (m_suspended) {
                         keyframeAnim->updatePlayState(AnimPlayStatePaused);
                         LOG(Animations, "  (created in suspended/paused state)");
