Source/WebCore/platform/animation/Animation.h
@@ -39,7 +39,7 @@ public:
     ~Animation();
 
     static PassRefPtr<Animation> create() { return adoptRef(new Animation); }
-    static PassRefPtr<Animation> create(const Animation* o) { return adoptRef(new Animation(*o)); }
+    static PassRefPtr<Animation> create(const Animation& other) { return adoptRef(new Animation(other)); }
 
     bool isDelaySet() const { return m_delaySet; }
     bool isDirectionSet() const { return m_directionSet; }
