Source/WebCore/platform/animation/AnimationList.cpp
@@ -25,16 +25,16 @@
 namespace WebCore {
 
 #define FILL_UNSET_PROPERTY(test, propGet, propSet) \
-for (i = 0; i < size() && animation(i)->test(); ++i) { } \
+for (i = 0; i < size() && animation(i).test(); ++i) { } \
 if (i < size() && i != 0) { \
     for (size_t j = 0; i < size(); ++i, ++j) \
-        animation(i)->propSet(animation(j)->propGet()); \
+        animation(i).propSet(animation(j).propGet()); \
 }
 
-AnimationList::AnimationList(const AnimationList& o)
+AnimationList::AnimationList(const AnimationList& other)
 {
-    for (size_t i = 0; i < o.size(); ++i)
-        m_animations.append(Animation::create(o.animation(i)));
+    for (size_t i = 0; i < other.size(); ++i)
+        m_animations.append(Animation::create(other.animation(i)));
 }
 
 void AnimationList::fillUnsetProperties()
@@ -51,12 +51,12 @@ void AnimationList::fillUnsetProperties()
     FILL_UNSET_PROPERTY(isPropertySet, property, setProperty);
 }
 
-bool AnimationList::operator==(const AnimationList& o) const
+bool AnimationList::operator==(const AnimationList& other) const
 {
-    if (size() != o.size())
+    if (size() != other.size())
         return false;
     for (size_t i = 0; i < size(); ++i)
-        if (*animation(i) != *o.animation(i))
+        if (animation(i) != other.animation(i))
             return false;
     return true;
 }
